--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@artsy/auto-config": "^1.0.2",
     "lerna": "^3.20.2",
     "typescript": "^3.8.3"
   }
