Add public access to packages

--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -5,6 +5,9 @@
   "author": "Justin Bennett <zephraph@gmail.com>",
   "homepage": "",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "lib/index.js",
   "directories": {
     "lib": "lib",
