--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Easily integrate Artsy's Palette w/ Next.js",
   "author": "Justin Bennett <zephraph@gmail.com>",
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "",
   "license": "MIT",
   "main": "lib/palette.js",
