--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -8,15 +8,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "lib/index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
+  "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
