--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -8,15 +8,9 @@
   },
   "homepage": "",
   "license": "MIT",
-  "main": "lib/palette.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
+  "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "peerDependencies": {
