Ensure package deployment happens on master builds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,3 +16,9 @@ workflows:
                 - master
           requires:
             - yarn/update-cache
+      - auto/publish:
+          context: npm-deploy
+          filters:
+            branches:
+              only:
+                - master
